# Music_Downloader_bot

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  install.sh  main.py  musicbot.service  pyproject.toml
docs/: alwaysdata.md  deploy.md  privacy.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  20d265199c96_add_cached_track_table.py  30e376200d97_add_callback_query_id.py  ae24884d162a_add_user_is_banned.py
musicbot/: __init__.py  cache.py  config.py  metrics.py  worker.py
musicbot/bot/: admin.py  handlers.py  middlewares.py  sender.py  session.py
musicbot/db/: __init__.py  models.py
musicbot/downloader/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_search_and_resolve.py  test_seek_metadata_fix.py
